style the search box

--- a/html_css_js/index.html
+++ b/html_css_js/index.html
@@ -11,6 +11,11 @@
     <title>Weather App</title>
 </head>
 <body>
-
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="enter city name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>  
+    </div>
 </body>
 </html>
