--- a/html_css_js/index.html
+++ b/html_css_js/index.html
@@ -16,6 +16,9 @@
             <input type="text" placeholder="enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
             <h1 class="temp">22°C</h1>
@@ -38,5 +41,6 @@
             </div>
         </div> 
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
